policy-management/policies/disallow-host-namespaces/.chainsaw-test/podcontroller-good.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment01-new
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      hostPID: false
      hostIPC: false
      hostNetwork: false
      containers:
      - name: busybox01
        image: ghcr.io/kyverno/test-busybox:1.35
      - name: busybox02
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob01-new
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: Never
          hostPID: false
          hostIPC: false
          containers:
          - name: busybox01
            image: ghcr.io/kyverno/test-busybox:1.35
          - name: busybox02
            image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      hostPID: false
      containers:
      - name: container01
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      hostIPC: false
      containers:
      - name: container01
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment04
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      hostNetwork: false
      containers:
      - name: container01
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment05
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      hostPID: false
      hostIPC: false
      hostNetwork: false
      containers:
      - name: container01
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob01
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob02
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          hostPID: false
          containers:
          - name: container01
            image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob03
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          hostIPC: false
          containers:
          - name: container01
            image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob04
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          hostNetwork: false
          containers:
          - name: container01
            image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob05
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          hostPID: false
          hostIPC: false
          hostNetwork: false
          containers:
          - name: container01
            image: ghcr.io/kyverno/test-busybox:1.35
